<resources>
    <string name="app_name">Acedrops</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="terms_and_conditions">By continuing you agree to the Acedrops\n<font color="#1983FF">Terms and Conditions</font></string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="new_here_sign_up">New here? <font color="#1983FF">Sign up</font></string>
    <string name="password_assistance">Password Assistance</string>
    <string name="enter_acedrop_account">Enter your phone number or email account associated with you acedrops account</string>
    <string name="next">Next</string>
    <string name="create_your_account">Create your account</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="already_have_an_account_log_in">Already have an account? <font color="#1983FF">Log In</font></string>
    <string name="to_continue_">To continue, complete the verification step. Enter the OTP sent to your mail.</string>
    <string name="verification_required">Verification Required</string>
    <string name="create_new_password">Create new password</string>
    <string name="old_password">Old Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="didn_t_recieve_the_code_resend_now">Didn’t receive the code? <font color="#1983FF">Resend Now</font></string>
    <string name="_00_30">00:30</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="acedrop">Acedrops</string>
    <string name="server_client_id">268564059113-4tes04r0sej5c1e1ukpmgv3o8em0n805.apps.googleusercontent.com</string>
    <string name="continue_shopping_to_add_items_to_cart">Continue shopping to add items to cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="Rs">\u20B9</string>
    <string name="remove_from_wishlist">Remove from wishlist</string>
    <string name="search_for_shops_or_products">Search for shops or products</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="manage_address">Manage Address</string>
    <string name="logout">Logout</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="about_acedrop">About Acedrops</string>
    <string name="faqs">FAQs</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="change_password">Change password</string>
    <string name="set_password">Set Password</string>
    <string name="add_new_address">Add new address</string>
    <string name="no_address_found">No Address Found</string>
    <string name="save">Save</string>
    <string name="house_flat_block_no">HOUSE/ FLAT / BLOCK NO.</string>
    <string name="street_name_plot_no">STREET NAME / PLOT NO.</string>
    <string name="locality">LOCALITY</string>
    <string name="city">CITY</string>
    <string name="state">STATE</string>
    <string name="shop">Shop</string>
    <string name="call">Call</string>
    <string name="products">Products</string>
    <string name="no_search_results_found">No search results found!</string>
    <string name="try_different_keyword">Try different keyword</string>
    <string name="buy_now">Buy now</string>
    <string name="_5">5</string>
    <string name="write_a_review">Write a review....</string>
    <string name="post">Post</string>
    <string name="subtotal">Subtotal</string>
    <string name="rate_us">Rate us</string>
    <string name="similar_products">Similar Products</string>
    <string name="my_orders">My Orders</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="thank_you">Thank you!</string>
    <string name="for_your_order">for your order.</string>
    <string name="your_order_will_be_dispatched_soon">Your order will be dispatched soon.</string>
    <string name="choose_delivery_address">Choose delivery address</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="please_try_again">Please try again</string>
    <string name="to_order">to order</string>
    <string name="failed">Failed !!!</string>
    <string name="order_summary">Order Summary</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="quantity">Quantity</string>
    <string name="product_name">Product Name</string>
    <string name="total_amount">Total Amount</string>
    <string name="add_phone_number">Add Phone Number</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="shops">Shops</string>
    <string name="default_image"><![CDATA[https://firebasestorage.googleapis.com/v0/b/acedrop-seller-1640952554752.appspot.com/o/Products%2Fpngegg%20(2).png?alt=media&token=d97510ff-c495-4646-bb3d-e01ea9fb6b60]]></string>
    <string name="help_support_text">Thanks for choosing acedrops for the convenient and safe online shopping experience . we will be more than happy to provide you the support . You can contact us by - \n\nCall us - 6392970547 \n\nMail us - info.acedrops@gmail.com</string>
    <string name="how_can_we_help_you">How can we help you ?</string>
    <string name="about_acedrop_text">Welcome to Acedrops, your number one source for social commerce marketplace. We\'re dedicated to giving you the very best of e-commerce, with a focus on convenience, trust and a smooth shopping experience \n\nFounded in 2021 by Vishal Shukla, Acedrops has come a long way from its beginnings in AKGEC , Ghaziabad. When vishal first started out, his passion for revolution in social commerce drove them to work on developing a perfect marketplace, so that Acedrops can offer you a marketplace for dreamers. We now serve customers all over the country, and are thrilled that we\'re able to turn our passion into our own platform. \n\nWe hope you enjoy our service as much as we enjoy offering them to you. If you have any questions or comments, please don\'t hesitate to contact us. \n\nSincerely, \n\nVishal</string>
</resources>