<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    app:layout_constraintDimensionRatio="1:1"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_red_tick" />

        <TextView
            style="@style/TextColor"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:text="@string/failed"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            style="@style/TextColor"
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_order"
            android:textSize="18sp" />

        <TextView
            android:layout_marginTop="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/please_try_again"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>